--- a/templates/publish_totp_ipfs.sh.j2
+++ b/templates/publish_totp_ipfs.sh.j2
@@ -1,5 +1,10 @@
 #!/usr/bin/env bash
 
+INFURA_PROJECT_ID="{{ infura_project_id }}"
+INFURA_PROJECT_SECRET="{{ infura_project_secret }}"
+PINATA_API_KEY="{{ pinata_api_key }}"
+PINATA_SECRET_API_KEY="{{ pinata_secret_api_key }}"
+
 ##
 ## Get previous version
 ##
@@ -14,6 +19,16 @@ fi
 ##
 
 ipfs pin rm $OLD_HASH
+if [ $? -ne 0 ]; then
+	exit
+fi
+
+curl -X POST -u "$INFURA_PROJECT_ID:$INFURA_PROJECT_SECRET" "https://ipfs.infura.io:5001/api/v0/pin/rm?arg=$OLD_HASH"
+if [ $? -ne 0 ]; then
+	exit
+fi
+
+curl -X DELETE -H 'Content-Type: application/json' -H "pinata_api_key: $PINATA_API_KEY" -H "pinata_secret_api_key: $PINATA_SECRET_API_KEY" "https://api.pinata.cloud/pinning/unpin/$OLD_HASH"
 if [ $? -ne 0 ]; then
 	exit
 fi
@@ -46,6 +61,16 @@ fi
 ##
 
 ipfs pin add $NEW_HASH
+if [ $? -ne 0 ]; then
+	exit
+fi
+
+curl -X POST -u "$INFURA_PROJECT_ID:$INFURA_PROJECT_SECRET" "https://ipfs.infura.io:5001/api/v0/pin/add?arg=$NEW_HASH"
+if [ $? -ne 0 ]; then
+	exit
+fi
+
+curl -X POST -H 'Content-Type: application/json' -H "pinata_api_key: $PINATA_API_KEY" -H "pinata_secret_api_key: $PINATA_SECRET_API_KEY" -d "{ \"hashToPin\": \"$NEW_HASH\" }" https://api.pinata.cloud/pinning/pinByHash
 if [ $? -ne 0 ]; then
 	exit
 fi
